# facetracker-core

./: CMakeLists.txt  Facetracker.opensdf  Facetracker.psess  Facetracker.sln  Facetracker.vcxproj  Facetracker.vcxproj.filters  Makefile  README.md  Xterm.log.debian.2015.04.04.01.34.01.18419  changelog  facetracker
Camera/: ft_detect.cpp  ft_draw.cpp
Camera/recognition/: Makefile  ft_recognise.cpp
Console/: ft_console.cpp
DB/: images.ext  images.ext~
Debug/: CL.read.1.tlog  CL.write.1.tlog  Facetracker.ilk  Facetracker.lastbuildstate  cl.command.1.tlog  vc110.idb
Header/: Image.h  XmlParsing.h  color.h  ft.h  ft.h.save  ft_draw.h  ft_recognise.h  secure.h
Utils/: ft_config.cpp  ft_log.cpp  ft_main.cpp  ft_parser.cpp  ft_secure.cpp  ft_utils.cpp
lib/XmlLibrary/: Image.cpp  Makefile  XmlParsing.cpp
